--- a/doma-spring-boot-samples/pom.xml
+++ b/doma-spring-boot-samples/pom.xml
@@ -17,6 +17,7 @@
     <modules>
         <module>doma-spring-boot-sample-simple</module>
         <module>doma-spring-boot-sample-entity-listener</module>
+        <module>doma-spring-boot-sample-event-handler</module>
     </modules>
 
     <properties>
